adds .css file and updates homework.html

--- a/homework.html
+++ b/homework.html
@@ -1,1 +1,14 @@
-Modify this file according to the instructions.
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="homework.css">
+	<title>My Favorite Things</title>
+</head>
+	<body>
+		<div class="main-content">
+			<h1>My Favorite Things</h1>
+			<p>This page's content is 960 pixels wide.  It is centered on the page with a 20 pixel margin at the top.  The heading above is white text on dark blue background.  The browser shows this page's title in the tab itself, "My Favorite Things."</p>
+		</div>
+	</body>
+
+</html>
