Adds all content and styling except main paragraph

--- a/homework.html
+++ b/homework.html
@@ -6,8 +6,32 @@
 </head>
 	<body>
 		<div class="main-content">
-			<h1>My Favorite Things</h1>
-			<p>This page's content is 960 pixels wide.  It is centered on the page with a 20 pixel margin at the top.  The heading above is white text on dark blue background.  The browser shows this page's title in the tab itself, "My Favorite Things."</p>
+			<h1 class="pageheader">My Favorite Things</h1>
+			<p id="sitedescription">This page's content is 960 pixels wide.  It is centered on the page with a 20 pixel margin at the top.  The heading above is white text on dark blue background.  The browser shows this page's title in the tab itself, "My Favorite Things."</p>
+			
+			<p class="listintro">Here's a numbered list:</p>
+			<hr>
+			<ol>
+				<li>Hockey games</li>
+				<li>Cookies</li>
+				<li>Computers</li>
+			</ol>
+
+			<p class="listintro">Here's a bulled list with blue border and 20 pixels of space inside the box:</p>
+			<hr>
+			<ul class="listbox">
+				<li>Hockey games</li>
+				<li>Cookies</li>
+				<li>Computers</li>
+			</ul>
+
+			<p class="listintro">And here's a simple horizontal list:</p>	
+			<hr>
+			<ul class="listbox horizontal">
+				<li>Hockey games</li>
+				<li>Cookies</li>
+				<li>Computers</li>
+			</ul>
 		</div>
 	</body>
 
